Bid/fix endpoints (#8)
* Commit for taskTypes and signedURL endpoints
* Initial commit

---------

Authored-by: Eduardo Van Cauteren <eduardo.vancauteren@moni.com.ar>
